--- a/BasicWebProject/BasicWebProject.csproj
+++ b/BasicWebProject/BasicWebProject.csproj
@@ -121,6 +121,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="pages\Createsong.cshtml" />
+    <Content Include="pages\Deletesong.cshtml" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
